--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -35,3 +35,7 @@ jobs:
         token: ${{ secrets.REPO_ACCESS_TOKEN }}
         org: true
         visibility: 'all'
+    - run: 'echo "$SSH_KEY" > key'
+      shell: bash
+      env:
+        SSH_KEY: ${{secrets.MINOR}}
