--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -36,5 +36,5 @@ jobs:
         
     - name: GitHub Tag Name example
       run: |
-        echo "Tag name from GITHUB_REF_NAME: $GITHUB_REF_NAME"
-        echo "Tag name from github.ref_name: ${{  github.ref_name }}"
+        echo "Tag name from GITHUB_REF_NAME: $GITHUB_REF#refs/tags/"
+        echo "Tag name from github.ref_name: ${{  GITHUB_REF#refs/tags/ }}"
