--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -41,3 +41,10 @@ jobs:
         fallback: 1.0.0 # Optional fallback tag to use when no tag can be found
     - name: 'Get Previous tag'
       run: echo ${{ steps.previoustag.outputs.tag }}
+    - name: Build and push Docker images
+      uses: docker/build-push-action@3b5e8027fcad23fda98b2e3ac259d8d67585f671
+      with:
+        context: .
+        push: true
+        tags: ${{ steps.meta.outputs.tags }}
+        labels: ${{ steps.meta.outputs.labels }}
