--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -2,9 +2,7 @@ name: Docker Image CI/CD
 
 on:
   push:
-    branches: [ "main" ]
-    tags:
-      - 'v*.*.*'
+    tags: [ v* ]
   pull_request:
     branches: [ "main" ]
 
