--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -17,6 +17,7 @@ jobs:
     - uses: actions/checkout@v4
       with:
         ref: main
+        fetch-depth: 0
     - name: Get Git Tag
       id: get_tag
       run: |
