--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -3,14 +3,11 @@ name: Docker Image CI/CD
 on:
   push:
     branches: [ "main" ]
-    tags: 
-      - '*'
-  workflow_dispatch:
+  pull_request:
+    branches: [ "main" ]
 
 jobs:
-
   build:
-
     runs-on: ubuntu-latest
 
     steps:
@@ -26,7 +23,7 @@ jobs:
       continue-on-error: true
 
     - name: Set Default Tag If Missing
-      if: steps.get_tag.outcome != 'success'  # Izvedi le, če je predhodni korak končal z napako
+      if: steps.get_tag.outcome != 'success'
       run: |
         echo "TAG=v1.0.0" >> $GITHUB_ENV
         
